fixed firefox homeapge layout bug

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -342,10 +342,17 @@ div.ribbon {
 
 /* LAYOUT --------------------------------------------------------- */
 
+.homeContainer {
+    width: 1024px;
+	width: 100%;
+	height: 100%;
+    margin: 0px auto;
+	overflow: auto;
+}
+
 .mainContainer {
     width: 1024px;
 	width: 100%;
-	/*height: 100%;*/
     margin: 0px auto;
 	overflow: auto;
 }
